async function sentimator()
right now the function print in the console the result of the text that he recived

--- a/sentimator.html
+++ b/sentimator.html
@@ -11,8 +11,8 @@
 <body>
     <h1>THE CRAZIEST WEBPAGE EVER</h1>
     <input id="text" placeholder="its your time to shine" type="input">
-    <button type="submit" value="submit">submit</button>
-    <div id = "result">YOUR MAMA IS IN HELL BABY</div>
+    <button id = "submit">submit</button>
+    <div id = "result"></div>
     
 </body>
 </html>
