added loading indicator

--- a/sentimator.html
+++ b/sentimator.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <h1>THE CRAZIEST WEBPAGE EVER</h1>
-    <input id="text" placeholder="its your time to shine" type="input">
+    <textarea id="text" placeholder="its your time to shine" type="input"></textarea>
+    <div class="loader" hidden = true></div>
     <button id = "submit">submit</button>
     <div id = "result"></div>
     
