--- a/sentimator.html
+++ b/sentimator.html
@@ -14,6 +14,7 @@
     <div class="loader" hidden = true></div>
     <button id = "submit">submit</button>
     <div id = "result"></div>
+    <img id ="cat"></div>
 
 </body>
 </html> 
