edit button submit

--- a/sentimator.html
+++ b/sentimator.html
@@ -12,7 +12,7 @@
     <h1>THE CRAZIEST WEBPAGE EVER</h1>
     <textarea id="text" placeholder="its your time to shine" type="input"></textarea>
     <div class="loader" hidden = true></div>
-    <button id = "submit">submit</button>
+    <button id = "submit">?sentiment?</button>
     <div id = "result"></div>
     <img id ="cat"></div>
 
